# soxy

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml  clippy.yml  macos.yml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/svc/: high.rs  low.rs  mod.rs
common/: Cargo.toml
common/src/: api.rs  lib.rs  log.rs  service.rs  util.rs
common/src/clipboard/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/command/: backend.rs  frontend.rs  mod.rs
common/src/ftp/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/input/: backend.rs  frontend.rs  mod.rs
common/src/socks5/: backend.rs  frontend.rs  mod.rs  protocol.rs
common/src/stage0/: backend.rs  frontend.rs  mod.rs
frontend/: Cargo.toml  build.rs  rdp_api.h
frontend/src/: config.rs  control.rs  lib.rs  windows.rs
frontend/src/client/: headers.h  headers.rs  mod.rs
frontend/src/client/citrix/: headers.h  headers.rs  mod.rs
frontend/src/client/freerdp/: headers.h  headers.rs  mod.rs
frontend/src/client/x11/: headers.h  headers.rs  mod.rs
frontend/src/svc/: mod.rs  rdp_api.rs  semaphore.rs
frontend/src/svc/citrix/: headers.h  headers.rs  mod.rs  vd.rs
frontend/src/svc/rdp/: headers.h  headers.rs  mod.rs
standalone/: Cargo.toml
tools/stage0/: stage0.ps1
win7-rustc/: .gitignore  Makefile  bootstrap.toml
