[package]
name = "backend"
version = "3.0.0"
edition = "2024"

[dependencies]
common = { path = "../common", features = [ "backend" ] }
crossbeam-channel = "0"
libloading = "0"
log = { version = "0", optional = true }
windows-sys = { version = "0", features = [
"Win32_Networking_WinSock",
"Win32_Security",
"Win32_Storage_FileSystem",
"Win32_System_Console",
"Win32_System_IO",
"Win32_System_LibraryLoader",
"Win32_System_RemoteDesktop",
"Win32_System_SystemServices",
"Win32_System_Threading",
] }

[build-dependencies]
bindgen = "0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[[bin]]
name = "soxy"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "soxy"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1

[features]
log = [ "common/log", "dep:log" ]
