[package]
name = "common"
version = "1.0.0"
edition = "2021"

[dependencies]
clipboard-win = "5"
crossbeam-channel = "0"
local-ip-address = "0"
log = { version = "0", optional = true }
simplelog = { version = "0", optional = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[features]
log = [ "dep:log", "dep:simplelog" ]
