[package]
name = "common"
version = "2.0.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0"
local-ip-address = "0"
log = { version = "0", optional = true }
simplelog = { version = "0", optional = true }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[features]
log = [ "dep:log", "dep:simplelog" ]
