[package]
name = "common"
version = "3.0.0"
edition = "2024"

[dependencies]
copyrs = { version = "0", default-features = false }
crossbeam-channel = "0"
log = { version = "0", optional = true }
network-interface = "2"
simplelog = { version = "0", optional = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[features]
log = [ "dep:log", "dep:simplelog" ]
backend = [ "copyrs/x11" ]
frontend = [ ]
