[package]
name = "frontend"
version = "1.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crossbeam-channel = "0"
log = { version = "0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0", features = [
"Win32_Networking_WinSock",
"Win32_System_Ole",
] }
winreg = "0"

[build-dependencies]
bindgen = "0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[lib]
crate-type = [ "cdylib" ]
name = "soxy"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true

[features]
default = [ "log" ]
log = [ "common/log", "dep:log" ]
citrix = []
