[package]
name = "standalone"
version = "1.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crossbeam-channel = "0"
log = { version = "0", optional = true }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
enum-glob-use = "allow"
missing-errors-doc = "allow"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
panic = "abort"

[[bin]]
name = "soxy_standalone"
path = "src/bin/standalone.rs"

[features]
log = [ "common/log", "dep:log" ]
